production/mongo-jiva/mongo-jiva-backend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo-jiva-backend
  namespace: mongo-jiva
spec:
  selector:
    matchLabels:
      app: mongo-jiva-backend
  template:
    metadata:
      labels:
        app: mongo-jiva-backend
    spec:
      serviceAccountName: mongo-jiva-operator
      containers:
      - name: mongo-jiva-backend-container
        ports:
        - containerPort: 3000
        args:
        - "mongodb://mongo-0.mongo"
        image: mayadata/www-mongo-jiva-test-backend:master-71d6b75
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: mongo-jiva
  namespace: mongo-jiva  
  labels:
    app: mongo-jiva-backend
  name: mongo-jiva-backend-service
spec:
  ports:
  - name: mongo-jiva-backend
    port: 3000
    protocol: TCP
  selector:
    app: mongo-jiva-backend
