production/mongo-jiva/mongo-jiva-client-backend.yaml
# Define OpenEBS/jiva mongo service and StatefulSet.
apiVersion: v1
kind: Service
metadata:
 name: mongo
 namespace: mongo-jiva
 labels:
   name: mongo
spec:
 ports:
 - port: 27017
   targetPort: 27017
 clusterIP: None
 selector:
   role: mongo
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
 name: mongo
 namespace: mongo-jiva
spec:
 serviceName: "mongo"
 replicas: 2
 template:
   metadata:
     labels:
       role: mongo
       environment: test
   spec:
     terminationGracePeriodSeconds: 10
     nodeSelector:
        name: mongogpd 
     containers:
       - name: mongo
         image: mongo
         command:
           - mongod
           - "--replSet"
           - rs0
           - "--smallfiles"
           - "--noprealloc"
           - "--bind_ip_all"
         ports:
           - containerPort: 27017
         volumeMounts:
           - name: mongo-persistent-storage
             mountPath: /data/db
       - name: mongo-sidecar
         image: cvallance/mongo-k8s-sidecar
 volumeClaimTemplates:
 - metadata:
     name: mongo-persistent-storage
   spec:
     storageClassName: openebsmongogpd
     accessModes:
       - ReadWriteOnce
     resources:
       requests:
         storage: 10G
---
#Backend deployment for mongo jiva application
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo-jiva-backend
  namespace: mongo-jiva
spec:
  selector:
    matchLabels:
      app: mongo-jiva-backend
  template:
    metadata:
      labels:
        app: mongo-jiva-backend
    spec:
      containers:
      - name: mongo-jiva-backend-container
        ports:
        - containerPort: 3000
        args:
        - "mongodb://mongodb://mongo-0.mongo-jiva"
        image: openebs/mongo-jiva-backend:1776f0b
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: mongo-jiva
  labels:
    app: mongo-jiva-backend
  name: mongo-jiva-backend-service
spec:
  ports:
  - name: mongo-jiva-backend
    port: 3000
    protocol: TCP
  selector:
    app: mongo-jiva-backend
---
#Client deployment for mongo jiva
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo-jiva-client
  namespace: mongo-jiva  
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app : mongo-jiva-client
    spec:
      containers:
        - name: mongo-jiva-client-container
          image: openebs/www-mongo-jiva-client:ghgh89
          imagePullPolicy: Always
          ports:
          - containerPort: 80
