production/mongo-jiva/mongo-jiva-client.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo-jiva-client
  namespace: mongo-jiva
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app : mongo-jiva-client
    spec:
      containers:
        - name: mongo-jiva-client-container
          image: mayadata/www-mongo-jiva-test-openebs:7ef354
          imagePullPolicy: Always
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: 
  name: mongo-jiva-client-service
  namespace: mongo-jiva
spec:
  type: NodePort
  ports:
  - name: mongo-jiva-client
    port: 80
    protocol: TCP
  selector:
    app: mongo-jiva-client
