production/mongo-jiva/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: percona-frontend-ingress
 namespace: percona-jiva
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
   kubernetes.io/tls-acme: "true"
spec:
 tls:
 - hosts:
   - perconajiva.openebs.ci
   secretName: percona-jiva-ingress
 rules:
 - host: perconajiva.openebs.ci
   http:
     paths:
     - path: /
       backend:
         serviceName: moperconango-jiva-client-service
         servicePort: 80
     - path: /api/
       backend:
         serviceName: percona-jiva-backend-service
         servicePort: 300
